--- a/packages/list_view/src/index.css
+++ b/packages/list_view/src/index.css
@@ -25,6 +25,11 @@ body {
   font-family: 'Pretendard-Regular';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overscroll-behavior-y: none;
+  overscroll-behavior-x: none;
+  overflow: scroll;
+  width: 100%;
+  height: 100%;
 }
 
 code {
